# ChangeLog for dev-ruby/cucumber
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2

*cucumber-0.3.95 (14 Aug 2009)

  14 Aug 2009; Hans de Graaff <graaff@gentoo.org> +cucumber-0.3.95.ebuild:
  Version bump with various bug fixes and minor enhancements.

*cucumber-0.3.94 (07 Aug 2009)

  07 Aug 2009; Hans de Graaff <graaff@gentoo.org> +cucumber-0.3.94.ebuild:
  Version bump with more support for the Kanban process.

  04 Aug 2009; Hans de Graaff <graaff@gentoo.org> -cucumber-0.3.9.ebuild,
  -cucumber-0.3.11.ebuild:
  Remove old versions.

*cucumber-0.3.93 (04 Aug 2009)

  04 Aug 2009; Hans de Graaff <graaff@gentoo.org> +cucumber-0.3.93.ebuild:
  Version bump with bug fixes and minor new features.

*cucumber-0.3.92 (30 Jul 2009)

  30 Jul 2009; Hans de Graaff <graaff@gentoo.org> +cucumber-0.3.92.ebuild:
  Version bump: improvements to Table.diff.

*cucumber-0.3.91 (28 Jul 2009)

  28 Jul 2009; Hans de Graaff <graaff@gentoo.org> +cucumber-0.3.91.ebuild:
  Version bump.

*cucumber-0.3.90 (22 Jul 2009)

  22 Jul 2009; Hans de Graaff <graaff@gentoo.org> +cucumber-0.3.90.ebuild:
  Version bump with many enhancements and bug fixes.

*cucumber-0.3.11 (06 Jun 2009)

  06 Jun 2009; Hans de Graaff <graaff@gentoo.org> -cucumber-0.3.5.ebuild,
  -cucumber-0.3.6.ebuild, -cucumber-0.3.7.ebuild, +cucumber-0.3.11.ebuild:
  Version bump with minor enhancements. Remove old versions.

*cucumber-0.3.9 (28 May 2009)

  28 May 2009; Hans de Graaff <graaff@gentoo.org> +cucumber-0.3.9.ebuild:
  Version bump with important bug fixes for Ruby on Rails support.

*cucumber-0.3.7 (24 May 2009)

  24 May 2009; Hans de Graaff <graaff@gentoo.org> +cucumber-0.3.7.ebuild:
  Version bump with minor enhancements and bug fixes.

*cucumber-0.3.6 (20 May 2009)

  20 May 2009; Hans de Graaff <graaff@gentoo.org> +cucumber-0.3.6.ebuild:
  Version bump with support for the Kanban development process.

  16 May 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Remove old versions
