@@ -1,24 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST cucumber-0.3.90.gem 150528 RMD160 29cfe642f7a681b3afb55ce47f27ebfe8cda0983 SHA1 60dbbb9c03c09b0580dcd3bd72fe48a95752c3ea SHA256 532447cbad994bb87ccf312020114c5261049a18c11af9194f89b1c16a04ab04
-DIST cucumber-0.3.91.gem 150528 RMD160 3ac70716eb87a96b92aac3d1140cf86316536d2a SHA1 4a438efe364b70a0e98b93a768943db0da7c7147 SHA256 0656958b4d333065a98ba72a6d0902090f555cf611f0ecfa6f823c2f47dc9353
-DIST cucumber-0.3.92.gem 151552 RMD160 46242eda6de0c82a7d918cbb64496d65ed876e40 SHA1 8ab9e8ccfcdbd19b5b1f3db53b2b6eba7a6d911c SHA256 2b82a9c254bd90b99177a1e1ac96d33ad22a07833b3642e70d3c10c5f613210e
-DIST cucumber-0.3.93.gem 156672 RMD160 8ad2d15e83ab0b402e95aa5c436bab176077881b SHA1 2950367a5ea35af7d9f3e51b47fb45438428843d SHA256 0f805a3bcc38e5fd9b1e50d3d5a7549d1021a2ebcb861a53b30d604f407e363b
 DIST cucumber-0.3.94.gem 161280 RMD160 62e90a9bd78390640c0d64083ae128e18bdc8bfa SHA1 0e6eac3b4db02660be5425e6bdf210fbcc7ff689 SHA256 8215c81e20478a6f0f2a23c96cfb21698d2082d15235c6e776175c0f3ad25958
 DIST cucumber-0.3.95.gem 162304 RMD160 b3a1d6f3c2d54937667b9320003ebc483289945e SHA1 67361fbf255e89b9f878004cfca0ffaa1722d91b SHA256 50a743cb2aba18c0e38ed2d29a768dff289f495869abfc7ef47d8c4b3e5ea663
-EBUILD cucumber-0.3.90.ebuild 538 RMD160 1eb038d5a080b5e77527f11a189be8047452e651 SHA1 53e29baaae138c7c63b308bd9b75929780891aa3 SHA256 7c7684cb5c3b5a60b935395a7b6cfb8f29cf5f961f414d14494ebc0535849d6f
-EBUILD cucumber-0.3.91.ebuild 558 RMD160 4dc5c83c99fd370018299132440bffac07ec780e SHA1 163b40a647604b73b9fec34a56908656889e586d SHA256 6a465e73787e20ee9dd29ce9247c48df235560136e38fa5f225715a5fccfd046
-EBUILD cucumber-0.3.92.ebuild 558 RMD160 f35434b19e956906a54cc5b4fb29aa6829ea831c SHA1 9ec76351f243b1d015e7f85d617b65e68a8c7cfc SHA256 2d98e6ef7bc0a72de6de559d4048b5cd04fa3069bffca0a9337e5b2ef759a58c
-EBUILD cucumber-0.3.93.ebuild 558 RMD160 f35434b19e956906a54cc5b4fb29aa6829ea831c SHA1 9ec76351f243b1d015e7f85d617b65e68a8c7cfc SHA256 2d98e6ef7bc0a72de6de559d4048b5cd04fa3069bffca0a9337e5b2ef759a58c
 EBUILD cucumber-0.3.94.ebuild 558 RMD160 f35434b19e956906a54cc5b4fb29aa6829ea831c SHA1 9ec76351f243b1d015e7f85d617b65e68a8c7cfc SHA256 2d98e6ef7bc0a72de6de559d4048b5cd04fa3069bffca0a9337e5b2ef759a58c
 EBUILD cucumber-0.3.95.ebuild 558 RMD160 f35434b19e956906a54cc5b4fb29aa6829ea831c SHA1 9ec76351f243b1d015e7f85d617b65e68a8c7cfc SHA256 2d98e6ef7bc0a72de6de559d4048b5cd04fa3069bffca0a9337e5b2ef759a58c
-MISC ChangeLog 3468 RMD160 a19713069c5e499f5b1712d44036733aa111bfe7 SHA1 2d774c0201e135246625fda4383417e6232fadcb SHA256 03268f5525b3016100567a327e0912c2193cd507c72ddb7b5b98cd02da483475
+MISC ChangeLog 3644 RMD160 c77a2adea581ae3ce5226642592d9a2d5b3980c4 SHA1 986e67e68d89b2444957067ac99fd6616febc6de SHA256 813ab5783ee916e4a11bdb3507ab7c7d0034e89ce331f2fa317b3c7ee9608f7b
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkqFGRkACgkQVYU2Ai8K93doEQCgxP2TQl4R312gl2oGplFTm8h5
-FKUAn3BJ7v5vu66TQOi8WiHnD+HF1loT
-=lYgC
+iEYEARECAAYFAkqFGTgACgkQVYU2Ai8K93dUyACeM5t9Sw/mNBB3/z1AakpEVgrP
+X90AoKIcEytcXvtRNMKSsxJL7aK1n2kW
+=bQOx
 -----END PGP SIGNATURE-----
